[package]
name = "lazy-tests"
edition = "2021"
publish = false

[[bin]]
name = "lazy-tests"
path = "src/main.rs"

[dev-dependencies]
mollusk-svm = "=0.4"
mollusk-svm-bencher = "0.4"
solana-account = "2.2.1"
solana-bpf-loader-program = "2.2.4"
solana-instruction = "2.2.1"
solana-logger = "2.3.1"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"