[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(target_os, values("solana"))',
]

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = { version = "0.9", path = "/Users/febo/Developer/anza-xyz/pinocchio/sdk/pinocchio" }